--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.4",
     "@types/react-slick": "^0.23.13",
+    "axios": "^1.7.2",
     "next": "14.2.4",
     "next-share": "^0.27.0",
     "react": "^18",
@@ -18,6 +19,7 @@
     "react-icons": "^5.2.1",
     "react-slick": "^0.30.2",
     "react-star-ratings": "^2.3.0",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
