--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
+    "@reduxjs/toolkit": "^2.2.6",
     "@types/react-slick": "^0.23.13",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
@@ -18,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^10.0.5",
